Add: h3: Accessible PDF and InDesign

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -419,16 +419,6 @@
         <a href="https://helpx.adobe.com/de/acrobat/using/creating-accessible-pdfs.html" hreflang="de">Barrierefreie <abbr>PDF</abbr>-Dokumente erstellen</a>,</span>
         <i class="website">Adobe</i>, last updated on 30.04.2021 (accessed on 24.06.2021).
       </li>
-      <li>Accede <abbr>PDF</abbr> Project:
-        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
-        (English translation of
-        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
-        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
-        you can even download a practice document.
-        <!--@@updated in 2018-->
-      </li>
-      <!--@@check: Barrierefreie Dokumente mit InDesign, 20.04.2016: https://friendlytraining.de/news/barrierefreie-dokumente-mit-indesign.html
-      -->
       <li>
         <a href="https://webaim.org/techniques/acrobat/"><abbr>PDF</abbr> Accessibility: Defining Acrobat <abbr>PDF</abbr> Accessibility</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in <!--July 2014--> April 2019.
@@ -587,6 +577,31 @@
         <a href="https://www.youtube.com/watch?v=BPytQ8n66x4">Advanced <abbr>PDF</abbr> Accessibility with Adobe Acrobat Pro DC: Forms</a>
         (<i class="ytchannel"><abbr>UA</abbr> Technology Accessibility</i> on YouTube, 56 minutes, 25.11.2019).
       </li>
+    </ul>
+
+    <h3>Accessible <abbr>PDF</abbr> and InDesign</h3>
+    <ul>
+      <li>Accede <abbr>PDF</abbr> Project:
+        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
+        (English translation of
+        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
+        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
+        you can even download a practice document.
+        <!--@@updated in 2018-->
+      </li>
+      <li><span lang="de">Posselt, Klaas:
+        <a href="https://www.creative-aktuell.de/de/blog-details/indesign-perfekte-web-pdfs-erstellen.html" hreflang="de">Optimale <abbr>PDF</abbr>-Dokumente für das Web mit InDesign erstellen – diese Features machen Leser glücklich(er)</a>,
+        <i class="website">Creative Aktuell</i>,</span> 05.03.2021.
+      </li>
+      <li><span lang="de">
+        <a href="https://www.creative-aktuell.de/de/creative-aktuell-magazinbeitrag/item/indesign-barrierefreiheit-pruefen-acrobat.html" hreflang="de">Wie Sie <abbr>PDF</abbr>-Formulare aus InDesign richtig auf die Barrierefreiheit überprüfen</a>,
+        <i class="website">Creative Aktuell</i></span> (no date; accessed on 14.07.2021).
+      </li>
+      <!--@@check:
+        * Barrierefreie Dokumente mit InDesign, 20.04.2016: https://friendlytraining.de/news/barrierefreie-dokumente-mit-indesign.html
+        * https://duckduckgo.com/?q=wie+sie+pdf++aus+indesign+richtig+auf+barrierefreiheit+%C3%BCberpr%C3%BCfen&t=ffab&ia=web
+        * Schulung: Barrierefreie PDF-Dokumente mit InDesign: https://accessible-digital-documents.com/de/barrierefreie-pdf-dokumente-mit-indesign/
+      -->
     </ul>
 
     <h3>Checking <abbr>PDF</abbr> Accessibility</h3>
