Add: Other PDF Tools

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -551,7 +551,7 @@
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
           see https://equidox.co/
         * "Tagged, accessible PDFs from Adobe InDesign - fast & reliably with MadeToTag", axaio software, 6 minutes, 17.08.2018: https://www.youtube.com/watch?v=Ap7_xcmeSU0
-          Video descriiption: "Karina Zander, Marketing & Sales Manager at axaio software, talks about tagged, accessible PDFs during a 5-minute talk at PDF Days 2018."
+          Video description: "Karina Zander, Marketing & Sales Manager at axaio software, talks about tagged, accessible PDFs during a 5-minute talk at PDF Days 2018."
           see https://www.axaio.com/doku.php/en:products:madetotag
         * Boris Doubrov: "Open source implementation of PDF/UA validation", PDF Association, 30 minutes, 24.11.2020: https://www.youtube.com/watch?v=zW37iNxksHE
           & https://www.pdfa.org/presentation/open-source-implementation-of-pdf-ua-validation/
@@ -624,6 +624,20 @@
         The <a href="https://www.youtube.com/watch?v=5daOdS2yJYM">YouTube video &ldquo;Introduction to <abbr>PAVE</abbr> v2.0&rdquo;</a>
         shows how the tool works.
         There is also a <a href="https://www.youtube.com/watch?v=u_Le6aNsO0U">German version of the video</a>.
+      </li>
+    </ul>
+
+    <h3>Other <abbr>PDF</abbr> Tools</h3>
+    <ul>
+      <li>
+        <a href="https://www.axes4.com/axespdf-for-word-ueberblick.html" hreflang="de" lang="de">axes<abbr>PDF</abbr> für Word</a>:
+        this is a commercial extension for Microsoft Word (version 2013 or higher) for Windows (Windows 7 or higher with .NET Framework 4.6.2).
+      </li>
+      <li>
+        <a href="https://pdf.abbyy.com/blog/pdf-ua/"><abbr>PDF</abbr>/<abbr>UA</abbr> – with focus on accessibility</a>,
+        <i class="blog">FineReader Blog</i>, 09.01.2019.
+        <br />This blog post explains what <abbr>PDF</abbr>/<abbr>UA</abbr> is and how you can create <abbr>PDF</abbr>/<abbr>UA</abbr> documents with FineReader.
+        (The process relies on <abbr>OCR</abbr> and it is not obvious how <abbr>OCR</abbr> alone can be used to generate an accessible <abbr>PDF</abbr> document.)
       </li>
     </ul>
 
