--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -375,6 +375,11 @@
         <!--See 'LibreOffice 5.2 “fresh” released, for Windows, Mac OS and GNU/Linux': https://blog.documentfoundation.org/blog/2016/08/03/libreoffice-5-2-fresh-released-for-windows-mac-os-and-gnulinux/ -->
         <!--"Editing Accessibility/Text Attributes": https://wiki.documentfoundation.org/Accessibility/TextAttributes - this is actually API documentation-->
       </li>
+      <li><span lang="de">
+        <a href="https://www.ionos.de/digitalguide/online-marketing/verkaufen-im-internet/ausfuellbares-pdf-formular-erstellen/" hreflang="de">Ausfüllbare <abbr>PDF</abbr>-Formulare erstellen – mit Acrobat und Freeware</a>,
+        <i class="website">IONOS</i>,</span> 11.08.2020 (accessed on 15.07.2021).
+        <br />This article only discusses how to create <abbr>PDF</abbr> forms, not how to make them accessible.
+      </li>
     </ul>
     <!--
       * AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html
