Add: PDF/UA and PDF/A documentation for iText

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -635,6 +635,10 @@
         this is a commercial extension for Microsoft Word (version 2013 or higher) for Windows (Windows 7 or higher with .NET Framework 4.6.2).
       </li>
       <li>
+        <a href="https://kb.itextsupport.com/home/it7kb/ebooks/itext-7-jump-start-tutorial-for-java/chapter-7-creating-pdf-ua-and-pdf-a-documents">Chapter 7: Creating <abbr>PDF</abbr>/<abbr>UA</abbr> and <abbr>PDF</abbr>/<abbr>A</abbr> documents</a>,
+        <i class="website">iText</i>, 22.04.2020 (accessed on 16.07.2021).
+      </li>
+      <li>
         <a href="https://www.pdflib.com/pdf-knowledge-base/pdfua/the-pdfua-standard/">The <abbr>PDF</abbr>/<abbr>UA</abbr>-1 Standard for Universal Accessibility</a>,
         <i class="website"><abbr>PDF</abbr>Lib</i> (no date; accessed on 15.07.2021).
         <br />In addition to general information about the standard, this article also links to examples of <abbr>PDF</abbr>lib 9 application code.
