add: CommonLook: Accessible PDF: A Glossary of Terms

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -681,6 +681,11 @@
         <br />Discusses some of the success criteria that were added in <abbr>WCAG</abbr> 2.1 and their relevance to <abbr>PDF</abbr>.
         Some of these new criteria are typically not relevant to <abbr>PDF</abbr>:  2.2.6 (Timeouts) and 2.5.2 (Pointer Cancellation).
       </li>
+      <li>
+        <a href="https://commonlook.com/Accessible-PDF-A-Glossary-of-Terms/">Accessible <abbr>PDF</abbr>: A Glossary of Terms</a>,
+        <i class="website">CommonLook</i>, 31.05.2019.
+      </li>
+      <!--@@ https://duckduckgo.com/?t=ffab&q=%22PDF%2FUA%22+standard+for+universal+accessibility+site%3Apdflib.com&ia=web -->
     </ul>
 
     <h3><abbr>PDF</abbr> Accessibility on Mac <abbr>OS</abbr></h3>
