Add accessibility Belgian federal gov

--- a/social-legal.html
+++ b/social-legal.html
@@ -679,6 +679,15 @@
         <a href="https://thehill.com/changing-america/respect/accessibility/559098-utah-yearbook-photo-excludes-cheerleader-with-down">Utah yearbook photo excludes cheerleader with Down syndrome</a>,
         <i class="website">The Hill</i>, 17.06.2021.
       </li>
+
+      <li><span lang="nl">
+        <a href="https://accessibility.belgium.be/nl/missies-en-klachten" hreflang="nl">Missies en klachten</a>,
+        <i class="website">De Federale Dienst voor Digitale Toegankelijkheid</i>,</span> (no date; accessed on 12.07.2021).
+      </li>
+      <li><span lang="nl">
+        <a href="https://handicap.belgium.be/nl/news/230920-accessibility.htm" hreflang="nl">Website aangepast aan <abbr>EU</abbr>-toegankelijkheidsrichtlijnen</a>,
+        <i class="website">Directie-generaal Personen met een handicap</i>,</span> 23.09.2020.
+      </li>
     </ul>
     <!--
     <section>
