Add: MS: Accessibility support for Word

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -70,6 +70,11 @@
             </li>
           </ul>
         </li>
+        <li>
+          <a href="https://support.microsoft.com/en-us/office/accessibility-support-for-word-c014d8b8-4ef3-4a7a-935d-295663f3343c">Accessibility support for Word</a>,
+          <i class="website">Microsoft Office Support</i> (no date; accessed on 07.07.2021).
+          <br />This document is not about authoring practices but documents accessibility features for screen reader users.
+        </li>
         <li>Cat Ellis: 
           <a href="http://www.techradar.com/how-to/how-to-use-the-accessibility-tools-in-windows-10">How to use the accessibility tools in Windows 10</a>,
           <i class="website">TechRadar</i>, May 2017.
