Add Browsealoud example

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -393,6 +393,14 @@
             <i class="website"><abbr>DBSV</abbr></i>, 06.05.2021. (Accessed on 11.05.2021.)
           </ul>
         </li>
+        <li>Browsealoud:
+          <ul>
+            <li>
+              <a href="https://freedomtech.ie/assistivetechnologypaper/">Assistive Technology for People with Disabilities and Older People: A Discussion Paper by Enable Ireland and Disability Federation Ireland (<abbr>DFI</abbr>)</a>,
+              <i class="website">FreedomTech</i>. (Accessd on 20.07.2021.)
+            </li>
+          </ul>
+        </li>
       </ul>
       <p>Widgets for contrast, background colour, font size or a combination of these:</p>
       <ul>
