Add: Assistive Technology for Kids with Learning Disabilities; ...

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -292,6 +292,14 @@
         <a href="https://leidmedien.de/aktuelles/gadgets-blinde/" hreflang="de">Gadgets lassen Blinde nicht wieder sehen</a>,
         <i class="website">Leidmedien</i></span>, 21.11.2017.
       </li>
+      <li>Stanberry, Kristin; Raskind, Marshall H.:
+        <a href="https://www.readingrockets.org/article/assistive-technology-kids-learning-disabilities-overview">Assistive Technology for Kids with Learning Disabilities: An Overview</a>,
+        <i class="website">Reading Rockets</i>, 28.12.2009, updated on 26.09.2019.
+      </li>
+      <li>
+        <a href="https://collegestats.org/resources/technology-guide-for-people-with-disabilities/">Technology Guide for People with Disabilities</a>,
+        <i class="website">CollegeStats.org</i>, 16.12.2016.
+      </li>
       <li>Hoogerwerf, Evert-Jan; Mavrou, Katerina; Traina, Ivan (editors):
         <i class="booktitle">The Role of Assistive Technology in Fostering Inclusive Education: Strategies and Tools to Support Change</i>.
         Routledge Research in Special Educational Needs. Routledge, 2020. (166 pages)
