add: Rembis et al: The Oxford Handbook of Disability History

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -878,6 +878,10 @@
           <i class="booktitle">Basic Vision: An Introduction to Visual Perception</i>. Revised edition. Oxford University Press, 2012. (424 pages)
           <a href="https://global.oup.com/academic/product/basic-vision-9780199572021"><abbr>ISBN</abbr> 9780199572021</a>.
         </li>
+        <li>Rembis, Michael; Kudlick, Catherine J.; Nielsen, Kim (editors):
+          <i class="booktitle">The Oxford Handbook of Disability History</i>. Oxford Handbooks. Oxford University Press, 2018. (552 pages)
+          <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-disability-history-9780190234959"><abbr>ISBN</abbr> 9780190234959</a>.
+        </li>
       </ul>
     </section>
 
@@ -1458,9 +1462,6 @@
         <li>
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
-        </li>
-        <li>
-          <a href=""></a>
         </li>
       </ul>
     </section>
