Add: accessible-slick

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -210,6 +210,12 @@
         <a href="https://a11y-guidelines.orange.com/fr/articles/recommandations-autocompletion/" hreflang="fr">Recommandations pour l'accessibilité d'un composant d'autocomplétion</a>,
         <i class="website">Recommandations accessibilité numérique Orange</i> (no date).
       </li>
+      <li>
+        <a href="https://accessible360.github.io/accessible-slick/">accessible-slick - the last (accessible) carousel you'll ever need</a>,
+        <i class="website">Accessible360</i> (no date; accessed on 07.07.2021).
+        <br />See also the
+        <a href="https://github.com/Accessible360/accessible-slick">source code of accessible-slick on GitHub</a>.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
