Add: Tutorial wie Sie in 12 Schritten ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -598,6 +598,10 @@
         <a href="https://www.creative-aktuell.de/de/creative-aktuell-magazinbeitrag/item/indesign-barrierefreiheit-pruefen-acrobat.html" hreflang="de">Wie Sie <abbr>PDF</abbr>-Formulare aus InDesign richtig auf die Barrierefreiheit überprüfen</a>,
         <i class="website">Creative Aktuell</i></span> (no date; accessed on 14.07.2021).
       </li>
+      <li><span lang="de">Hugo, Matthias:
+        <a href="https://www.konturenreich.de/indesign_barrierefreie_pdfs-erstellen/" hreflang="de">Tutorial wie Sie in 12 Schritten mit Adobe InDesign barrierefreie <abbr>PDFs</abbr> erstellen</a>,
+        <i class="website">Konturenreich</i>,</span> 26.03.2019 (updated on 10.05.2021).
+      </li>
       <!--@@check:
         * Barrierefreie Dokumente mit InDesign, 20.04.2016: https://friendlytraining.de/news/barrierefreie-dokumente-mit-indesign.html
         * https://duckduckgo.com/?q=wie+sie+pdf++aus+indesign+richtig+auf+barrierefreiheit+%C3%BCberpr%C3%BCfen&t=ffab&ia=web
@@ -1698,8 +1702,9 @@
           <a href=""></a>
           (<i class="ytchannel"></i> on YouTube, minutes, ).
         </li>
-        <li>
-          <a href=""></a>
+        <li>:
+          <i class="booktitle"></i>. ( pages)
+          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
       </ul>
     <section>
