Add: Screen Magnification and Reflow in Adobe Acrobat; Accessible PDF screen reader demo

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -547,6 +547,15 @@
         <a href="https://medium.com/@krisrivenburgh/the-pdf-accessibility-guide-how-to-make-your-portable-documents-accessible-6e77a21a098f">The <abbr>PDF</abbr> Accessibility Guide: How to Make Your Portable Documents Accessible</a>,
         <i class="blog">Kris Rivenburgh</i> (on Medium), 17.06.2019.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=fCrZhnFrxjk">Web Accessibility 101: Screen Magnification &amp; Reflow in Adobe Acrobat</a>
+        (<i class="ytchannel">Level Access</i> on YouTube, 2 minutes, 14.01.2014).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=tEkZUlNfcZo">Accessible <abbr>PDF</abbr> screen reader demo</a>
+        (<i class="ytchannel"><abbr>UC</abbr> Systemwide Talent Management</i> on YouTube, 2 minutes, 14.07.2020).
+        <br />This video shows how <abbr>NVDA</abbr> reads a correctly tagged <abbr>PDF</abbr> that contains headings, normal text, links and a data table.
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
