Add: Sumner: The Ember JS Framework Takes the GAAD Pledge

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -533,6 +533,10 @@
           The side <abbr>DOM</abbr> and the <abbr>AOM</abbr> are being used in the new Google Docs.
           <!--Referrer: Steve Faulkner, 25.05.2021: https://twitter.com/stevefaulkner/status/1397190712026927112 -->
         </li>
+        <li>Sumner, Melanie:
+          <a href="https://blog.emberjs.com/gaad-2021/">The Ember <abbr>JS</abbr> Framework Takes the <abbr>GAAD</abbr> Pledge</a>,
+          <i class="blog">Ember blog</i>, 20.05.2021.
+        </li>
       </ul>
     <section>
     <!--
