Add: h2: Accessible Tables in PDF

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -573,6 +573,28 @@
     </ul>
     <!--https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
+    <h3>Accessible Tables in <abbr>PDF</abbr></h3>
+    <ul>
+      <li><span lang="de">Frölich, Dirk:
+        <a href="https://www.youtube.com/watch?v=6vC-w1sXH-o">Barrierefreie Tabellen in <abbr>PDF</abbr>-Dokumenten – Teil I/III: <abbr>PDF</abbr>-Dokumente mit Word erstellen</a>
+        (<i class="ytchannel">df-edv</i></span> on YouTube, 10 minutes, 21.03.2018).
+        <br />In this video, a Word document containing both a normal table and a complex table is converted to <abbr>PDF</abbr> using Word's built-in <abbr>PDF</abbr> export feature
+        and evaluated using <abbr>PAC</abbr> 3.
+      </li>
+      <li><span lang="de">Frölich, Dirk:
+        <a href="https://www.youtube.com/watch?v=xu8ySeQjDZk">Barrierefreie Tabellen in <abbr>PDF</abbr>-Dokumenten - Teil II/III Fehlerkorrektur mit Adobe Acrobat</a>
+        (<i class="ytchannel">df-edv</i></span> on YouTube, 15 minutes, 10.04.2018).
+        <br />This video continues where the previous one left off. It shows that <abbr>PAC</abbr> 2 does not find the accessibility issues inside the tables that <abbr>PAC</abbr> 3 detected.
+        It shows how to add the <code>scope</code> attribute to table header cells (required by <abbr>PDF/UA</abbr>)
+      </li>
+      <li><span lang="de">Frölich, Dirk:
+        <a href="https://www.youtube.com/watch?v=A-MZ08ZphII">Barrierefreie Tabellen in <abbr>PDF</abbr>-Dokumenten - Teil III - QuickFix</a>
+        (<i class="ytchannel">df-edv</i></span> on YouTube, 11 minutes, 24.04.2018).
+        <br />This video shows to solve a number of accessibility issues in tables using axes<abbr>PDF</abbr> QuickFix.
+        This tool uses some of the same libraries that have been integrated into <abbr>PAC</abbr> 3.
+      </li>
+    </ul>
+
     <h3>Accessible <abbr>PDF</abbr> Forms</h3>
     <ul>
       <li>University of Washington:
