add: The Font That Makes Everyone Read Faster - Cheddar Explains

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1673,6 +1673,13 @@
           <a href="https://brailleinstitute.org/freefont">Atkinson Hyperlegible Font</a>,
           <i class="website">Braille Institute of America</i>, 2021.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=GIm8arSogvY">The Font That Makes Everyone Read Faster - Cheddar Explains</a>
+          (<i class="ytchannel">Cheddar</i> on YouTube, 7 minutes, 25.09.2019).
+          <br />This is a video about the Lexend fonts developed by Bonnie Shaver-Troup.
+          Note that the video discusses a comparison of reading speeds for Lexend with Times New Roman and only for texts in English, which limits the validity of the claim in the video's title.
+          <!--@@see Lexend: https://www.lexend.com/ -->
+        </li>
       </ul>
     </section>
 
@@ -1725,6 +1732,7 @@
       </ul>
 
       <h3>Font Faces for People with Dyslexia</h3>
+      <!--@@check https://pubmed.ncbi.nlm.nih.gov/?term=font+dyslexia -->
       <ul>
         <li>Rello, Luz; Baeza-Yates, Ricardo:
           <a href="https://dl.acm.org/citation.cfm?id=2513447">Good fonts for dyslexia</a>,
