Add: Blackmore: Tagging Complex Tables; Brusnighan: Making Tables More Accessible

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -593,6 +593,20 @@
         <br />This video shows to solve a number of accessibility issues in tables using axes<abbr>PDF</abbr> QuickFix.
         This tool uses some of the same libraries that have been integrated into <abbr>PAC</abbr> 3.
       </li>
+      <li>Blackmore, Gershon:
+        <a href="https://www.levelaccess.com/tagging-complex-tables/">Tagging Complex Tables</a>,
+        <i class="blog">Level Access Blog</i>, 02.05.2017, updated on 31.01.2021.
+      </li>
+      <li>Brusnighan, Dean (Purdue University):
+        <a href="https://www.youtube.com/watch?v=oLY9kX4qpWM">Making Tables More Accessible</a>
+        (<i class="ytchannel">Adam Barragato</i> on YouTube, 4 minutes, 18.11.2017).
+        <br />This video shows the Touch Up Reading Order tool, how to check the reading order,
+        how to check whether table header cells are correctly marked up (and how to change this if this is not the case).
+        In the video's last minute, Brusnighan briefly discusses complex tables and refers to Gershon Blackmore's article
+        <a href="https://www.levelaccess.com/tagging-complex-tables/">Tagging Complex Tables</a>.
+        <br />(This video assumes that the <abbr>PDF</abbr> file is already tagged and not protected;
+        if the file is protected, the Reading Order button in the Accessibility panel is disabled.)
+      </li>
     </ul>
 
     <h3>Accessible <abbr>PDF</abbr> Forms</h3>
