Add: FreedomTech: Assistive Technology ...

--- a/social-legal.html
+++ b/social-legal.html
@@ -680,6 +680,7 @@
         <i class="website">The Hill</i>, 17.06.2021.
       </li>
 
+      <!--@@policy Belgium-->
       <li><span lang="nl">
         <a href="https://accessibility.belgium.be/nl/missies-en-klachten" hreflang="nl">Missies en klachten</a>,
         <i class="website">De Federale Dienst voor Digitale Toegankelijkheid</i>,</span> (no date; accessed on 12.07.2021).
@@ -687,6 +688,12 @@
       <li><span lang="nl">
         <a href="https://handicap.belgium.be/nl/news/230920-accessibility.htm" hreflang="nl">Website aangepast aan <abbr>EU</abbr>-toegankelijkheidsrichtlijnen</a>,
         <i class="website">Directie-generaal Personen met een handicap</i>,</span> 23.09.2020.
+      </li>
+      <!--@@policy Ireland-->
+      <li>
+        <a href="https://freedomtech.ie/assistivetechnologypaper/">Assistive Technology for People with Disabilities and Older People: A Discussion Paper by Enable Ireland and Disability Federation Ireland (<abbr>DFI</abbr>)</a>,
+        <i class="website">FreedomTech</i>, November 2016.
+        <!--Full PDF: https://freedomtech.ie/publications/AT%20Paper%20final%20version.pdf -->
       </li>
     </ul>
     <!--
