Update references for IAAP certificates and exam prep

--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -90,47 +90,63 @@
       <ul>
         <li>
           <a href="https://www.accessibilityassociation.org/prepandcaec">Certification Preparation and Continuing Education (<abbr>CPAC</abbr>)</a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
+          <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+          <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/certification-prepare -->
         </li>
         <li>
           <a href="https://www.accessibilityassociation.org/prepareforcpacc">Prepare for <abbr title="Certification Preparation and Continuing Education">CPAC</abbr></a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
+          <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+          <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/prepareforcpacc -->
         </li>
         <li><span lang="de">
           <a href="https://iaap-dach.org/CPACC.html" hreflang="de"><span lang="fr">Certified Professional in Accessibility Core Competencies (<abbr>CPACC</abbr>)</span>&nbsp;–
           Zertifizierte Fachkraft für Kernkompetenzen der Barrierefreiheit</a>,
-          <i class="website"><abbr>IAAP</abbr> <abbr title="Deutschland, Österreich, Schweiz">DACH</abbr></i>,</span> January 2021.
+          <i class="website"><abbr>IAAP</abbr> <abbr title="Deutschland, Österreich, Schweiz">DACH</abbr></i>,</span> January 2021 (accessed on 25.07.2021)..
         </li>
         <li><span lang="de">
           <a href="https://iaap-dach.org/zertifizierungen/was.html" hreflang="de"><span lang="fr">Web Accessibility Specialist (<abbr>WAS</abbr>)</span>&nbsp;–
           Spezialist für Web-Barrierefreiheit</a>,
-          <i class="website"><abbr>IAAP</abbr> <abbr title="Deutschland, Österreich, Schweiz">DACH</abbr></i>,</span> January 2021.
+          <i class="website"><abbr>IAAP</abbr> <abbr title="Deutschland, Österreich, Schweiz">DACH</abbr></i>,</span> January 2021 (accessed on 25.07.2021)..
         </li>
         <li>
           <a href="https://www.accessibilityassociation.org/wascertification">Web Accessibility Specialist (<abbr>WAS</abbr>)</a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
+          <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+          <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/wascertification -->
           <br />See also:
           <ul>
             <li>
-              <a href="https://www.accessibilityassociation.org/wassamplequestions"><abbr>WAS</abbr> Sample Exam Questions</a>.
+              <a href="https://www.accessibilityassociation.org/prepareforwas">Prepare for <abbr>WAS</abbr></a>,
+              <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+              <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/prepareforwas -->
+            </li>
+            <li>
+              <a href="https://www.accessibilityassociation.org/wassamplequestions"><abbr>WAS</abbr> Sample Exam Questions</a> (accessed on 25.07.2021).
+              <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/was-sample-exam-questions -->
             </li>
           </ul>
-        </li>
-        <li>
-          <a href="https://www.accessibilityassociation.org/prepareforwas">Prepare for <abbr>WAS</abbr></a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
         </li>
         <li>
           <a href="https://www.accessibilityassociation.org/cpwa">Certified Professional in Web Accessibility (<abbr>CPWA</abbr>)</a>,
           <i class="website"><abbr>IAAP</abbr></i>.
         </li>
-        <li>
-          <a href="https://www.accessibilityassociation.org/adscontentoutline">Accessible Document Specialist Content Outline</a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
+        <li>Accessible Document Specialist (<abbr>ADS</abbr>):
+          <ul>
+            <li>
+              <a href="https://www.accessibilityassociation.org/adscontentoutline">Accessible Document Specialist Content Outline</a>,
+              <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+              <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/accessible-document-specialist-content -->
+            </li>
+            <li>
+              <a href="https://www.accessibilityassociation.org/s/prepare-for-ads">Prepare for <abbr title="Accessible Document Specialist">ADS</abbr></a>,
+              <i class="website"><abbr>IAAP</abbr></i> (accessed on 25.07.2021).
+            </li>
+          </ul>
         </li>
+
         <li>
           <a href="https://www.accessibilityassociation.org/cpabetaskforce">Built Environment Taskforce</a>,
-          <i class="website"><abbr>IAAP</abbr></i>.
+          <i class="website"><abbr>IAAP</abbr></i>(accessed on 25.07.2021).
+          <!--25.07.2021: redirect to https://www.accessibilityassociation.org/s/built-environment-taskforce -->
         </li>
         <li>
           <a href="https://www.youtube.com/watch?v=dHRFvuSKM1o">Preparing for the IAAP Accessibility Certifications! 📚 CPACC and WAS Overview</a>
