Add: Haben Girma on AccessiBe

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -528,6 +528,11 @@
           <a href="https://www.lireo.com/15-things-to-know-twitter-alternative-text-images/">10 Things to Know About Twitter’s Alternative Text for Images</a>,
           <i class="website">Lireo Designs</i>, 01.06.2020.
         </li>
+        <li>Wold, William:
+          <a href="https://addons.mozilla.org/en-US/firefox/addon/twitter-required-alt-text/">Twitter Required Alt Text</a>,
+          <i class="website">Firefox Browser Add-ons</i> (accessed on 23.07.2021).
+          <br /><q>Small extension that will force you to add alt text to images when tweeting</q>.
+        </li>
         <li>Camel casing hashtags improves accessibility: screen readers announce each word separately.
           (<a href="https://twitter.com/jma245/status/1308086738196353024">Jennifer Aldrich citing Deborah Edwards-Oñoro on Twitter, 21.09.2020</a>)
         </li>
@@ -1656,7 +1661,7 @@
           Tisa, Droid Sans, Playfair Display, Minion, Open Sans, Bookerly and Literata.
         </li>
         <li>Reddy, Michael:
-          <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr>ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
+          <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr title="Americans with Disabilities Act">ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
           <i class="website">Digital Authority Partners</i>, 11.12.2019.
           <br />(This article does not constitute design advice. For example, it describes the following typefaces as
           <q><abbr>ADA</abbr>-friendly</q>: Tahoma, Calibri, Helvetica, Arial, Verdana and Times New Roman.)
@@ -2171,7 +2176,7 @@
           </p>
         </li>
         <li>Hunt, Richard M.:
-          <a href="https://accessdefense.com/?p=5378">Is there a silver bullet for ADA website accessibility? Sorry, but the answer is no.</a>,
+          <a href="https://accessdefense.com/?p=5378">Is there a silver bullet for <abbr>ADA</abbr> website accessibility? Sorry, but the answer is no.</a>,
           <i class="website">Accessibility Defense</i>, 31.03.2020. (The point of view of a lawyer.)
         </li>
         <li>Groves, Karl:
@@ -2221,6 +2226,11 @@
         </li>
         <li>Stephen Clower:
           <a href="https://sclower.github.io/accessibegone/">AccessiBe Gone: Instructions for blocking AccessiBe and similar intrusive overlays</a>.
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=R12Z1Sp-u4U">Avoid AccessiBe &amp; other companies claiming quick &amp; easy <abbr>AI</abbr> accessibility</a>
+          (<i class="ytchannel">Haben Girma</i> on YouTube, 3 minutes, 05.05.2021).
+          <br /><a href="https://en.wikipedia.org/wiki/Haben_Girma">Haben Girma</a> is deafblind disability rights advocate.
         </li>
         <li>Glaser, April
           <a href="https://www.nbcnews.com/tech/innovation/blind-people-advocates-slam-company-claiming-make-websites-ada-compliant-n1266720">Blind people, advocates slam company claiming to make websites <abbr>ADA</abbr> compliant</a>,
@@ -2272,7 +2282,7 @@
         </li>
         <li>
           <a href="https://userway.org/">UserWay</a> (Floor Wilmington, <abbr>DE</abbr>, <abbr>USA</abbr>):
-          <q>The World's Leading Automated Website Accessibility Solution for ADA &amp; WCAG Compliance</q><br />
+          <q>The World's Leading Automated Website Accessibility Solution for <abbr>ADA</abbr> &amp; <abbr>WCAG</abbr> Compliance</q><br />
           <q>Requires only a single line of JavaScript</q>. (Accessed on 12.05.2021.)
           <br />
           <q>UserWay's plugin will instantly strengthen any weak spots that might cause issues.
@@ -2739,6 +2749,10 @@
         <li><span lang="de">
           <a href="" hreflang="de"></a>,
           <i class=""></i></span>,
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
         </li>
         <li>
           <a href=""></a>
