add: Fixing PDF Tables for 508 Compliance Manual Tagging

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -607,6 +607,15 @@
         <br />(This video assumes that the <abbr>PDF</abbr> file is already tagged and not protected;
         if the file is protected, the Reading Order button in the Accessibility panel is disabled.)
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=rnIX8HrYemE">Fixing <abbr>PDF</abbr> Tables for 508 Compliance Manual Tagging</a>
+        (<i class="ytchannel">Points of Access with Phillip White</i> on YouTube, 13 minutes, 31.05.2019).
+        <br />The process shown in this video begins with an untagged <abbr>PDF</abbr> document and first tags all the table cells,
+        creating table row elements, moving the table cells into the rows, moving the row into a table element,
+        changing the markup for table headers from <code>TD</code> to <abbr>TH</abbr>, checking the results in the Reading Order dialog,
+        editing the table Table Editor Options, fixing the spanning of columns, fixing row heading spans, defining headings scope,
+        setting IDs for column headings and row headings, and adding heading markup.
+      </li>
     </ul>
 
     <h3>Accessible <abbr>PDF</abbr> Forms</h3>
