Add: Toegankelijkheid in Vlaanderen

--- a/social-legal.html
+++ b/social-legal.html
@@ -689,6 +689,18 @@
         <a href="https://handicap.belgium.be/nl/news/230920-accessibility.htm" hreflang="nl">Website aangepast aan <abbr>EU</abbr>-toegankelijkheidsrichtlijnen</a>,
         <i class="website">Directie-generaal Personen met een handicap</i>,</span> 23.09.2020.
       </li>
+      <li><span lang="nl">
+        <a href="https://gelijkekansen.be/praktisch/toegankelijke-websites-bij-lokale-besturen" hreflang="nl">Toegankelijke websites bij lokale besturen</a>,
+        <i class="website">Gelijke kansen Vlaanderen</i>,</span> 31.08.2020.
+      </li>
+      <li><span lang="nl">
+        <a href="https://overheid.vlaanderen.be/digitale-toegankelijkheid" hreflang="nl">Digitale toegankelijkheid</a>,
+        <i class="website">Vlaanderen Intern</i></span> (no date; accessed on 12.07.2021).
+      </li>
+      <li><span lang="nl">
+        <a href="https://overheid.vlaanderen.be/wettelijke-verplichtingen-webtoegankelijkheid" hreflang="nl">Wettelijk kader webtoegankelijkheid</a>,
+        <i class="website">Vlaanderen Intern</i></span> (no date; accessed on 12.07.2021).
+      </li>
       <!--@@policy Ireland-->
       <li>
         <a href="https://freedomtech.ie/assistivetechnologypaper/">Assistive Technology for People with Disabilities and Older People: A Discussion Paper by Enable Ireland and Disability Federation Ireland (<abbr>DFI</abbr>)</a>,
