Add: The Teen Species

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -225,6 +225,12 @@
         <li><a href="https://www.halleonardbooks.com/">Hal Leonard</a>:
           <q>If you're looking for Backbeat Books, Amadeus Press, Applause Theatre &amp; Cinema Books, or Limelight Editions, <a href="https://rowman.com/" target="_blank">click here</a>.</q>
         </li>
+        <li>
+          <a href="https://teenspecies.github.io/Research.html">Research</a>, <i class="website">The Teen Species</a>. (Accessed on 27.07.2021.)
+          <br />Example:
+          <q>To explore Professor Baird's publications, click <a href="https://teenspecies.github.io/Publications.html"> here </a></q>.
+          <br />See also the &ldquo;here&rdquo; links on the <a href="https://teenspecies.github.io/News.html">News page</a>.
+        </li>
       </ul>
 
       <h3>Forms</h3>
