--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -616,6 +616,15 @@
         editing the table Table Editor Options, fixing the spanning of columns, fixing row heading spans, defining headings scope,
         setting IDs for column headings and row headings, and adding heading markup.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=zcSL6ZweGwc">Web Accessibility - <abbr>PDF</abbr> Table Prep with Screen Reader and Read Out Loud Demos</a>
+        (<i class="ytchannel">ODE HelpDesk</i> on YouTube, 10 minutes, 01.12.2016).
+        <br />This video first shows how a screen reader reads a table in Microsoft Word if table headers have not been marked up and how the corresponding <abbr>PDF</abbr> version is read.
+        It then shows how to fix the table in Adobe Acrobat 11 Professional: it uses the Touch Up Reading Order tool for to fix a few accessibility issues outside the table,
+        then creates header cells in the table, assigns IDs to them and then connects the data cells with those header IDs.
+        It then shows what the resulting table sounds like in a screen reader.
+        It also show the Read Out Loud functionality in Adobe Acrobat, which is not a true screen reader and ignores the connections between the data cells and the header cells.
+      </li>
     </ul>
 
     <h3>Accessible <abbr>PDF</abbr> Forms</h3>
