Add: Castro: PDF Accessibility Merging Tables

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -625,6 +625,16 @@
         It then shows what the resulting table sounds like in a screen reader.
         It also show the Read Out Loud functionality in Adobe Acrobat, which is not a true screen reader and ignores the connections between the data cells and the header cells.
       </li>
+      <li>Castro, Dax:
+        <a href="https://www.youtube.com/watch?v=ykP9KAAVhSg"><abbr>PDF</abbr> Accessibility Merging Tables</a>
+        (<i class="ytchannel"><abbr>PDF</abbr> Accessibility</i> on YouTube, 8 minutes, 17.02.2020).
+        <br />This video shows a table with a header row that is repeated at the top of each table; the table header row on the second and subsequent page are turned into artefacts.
+        After deleting the redundant table header row elements, all table rows are moved into the same table body element.
+        <!--@@requires screen reader testing befor and after-->
+        <br />The sample <abbr>PDF</abbr> files used in this video can be downloaded from the page
+        <a href="http://section5oh8.com/pdf-remediation/merging-tables-that-break-across-multiple-pages/">Merging tables that break across multiple pages</a> (17.02.2020).
+        <!--http://www.section508help.com/-->
+      </li>
     </ul>
 
     <h3>Accessible <abbr>PDF</abbr> Forms</h3>
